@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2176: add logical plan assumption checker  (thejas)
+
 PIG-1631: Support to 2 level nested foreach (aniket486 via daijy)
 
 PIG-2191: Reduce amount of log spam generated by UDFs (dvryaboy)
